    * Enchantments module:
        - Add enchantment "Area" that makes tools dig multiple blocks at the same time.
    * Redstone module:
        - Add assembler block that can automatically craft recipes.
    * Industry module:
        - Add copper and tin ore.
        - Add copper, tin and bronze ingots.
        - Add copper, tin, bronze and iron nuggets.
        - Add copper, tin and bronze blocks.
        - Remove furnace recipes for smelting iron and gold ore.
        - Add metal furnace to smelt metals.