@@ -7,5 +7,6 @@
         - Add copper, tin and bronze ingots.
         - Add copper, tin, bronze and iron nuggets.
         - Add copper, tin and bronze blocks.
+        - Add bronze tools and armor.
         - Remove furnace recipes for smelting iron and gold ore.
         - Add metal furnace to smelt metals.
